...
  });

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Dhenu'),
      ),
      drawer: Drawer(
        child: ListView(
          padding: EdgeInsets.zero,
          children: [
            const DrawerHeader(
...
                style: TextStyle(
                  color: Colors.white,
                  fontSize: 24,
                ),
              ),
            ),
            _buildDrawerItem(context, 'Dashboard', '/dashboard', location),
            _buildDrawerItem(context, 'Profile', '/profile', location),
            _buildDrawerItem(context, 'Forum', '/forum', location),
            _buildDrawerItem(context, 'Network', '/network', location),
            _buildDrawerItem(context, 'Settings', '/settings', location),
            _buildDrawerItem(context, 'Help', '/help', location),
          ],
...
